tests/sources/invalid/types/semantic_equality_mismatch.fire
// Semantic type error: cannot compare incompatible types with '=='.

fn equality_mismatch() -> void {
    a: int32 = 5;
    b: bool = a == "hello";  //~ ERROR FS-SEM-0010 @17
}
